--- a/public/css/doner.css
+++ b/public/css/doner.css
@@ -309,12 +309,12 @@ body {
 /* Container styles */
 
 .container {
-    max-width: 60%;
+
     margin: 100px auto;
     background: linear-gradient(245.59deg,  #ED213A 28.53%, #93291E 75.52%);
     border-radius: 30px;
-    padding: 40px;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    padding-top: 40px;
+    box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.5);
 }
 
 .container h1 {
