--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,7 +75,7 @@ section{
     font-family: 'Permanent Marker', cursive;
     font-size: 90px;
     line-height: 1;
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 0 0 45px;
 
 }.hero-text h4{
